--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
             <span class="calculator-result"></span>
         </div>
         <form class="calculator-keys">
-            <input type="button" class="calculator-keys-operator" onclick="clean()" value="C">
-            <input type="button" class="calculator-keys-operator" onclick="backspace()" value="<">
-            <input type="button" class="calculator-keys-operator" onclick="insert('/')" value="/">
-            <input type="button" class="calculator-keys-operator" onclick="insert('*')" value="X">
-            <input type="button" class="calculator-key-number" onclick="insert('7')" value="7">
-            <input type="button" class="calculator-key-number" onclick="insert('8')" value="8">
-            <input type="button" class="calculator-key-number" onclick="insert('9')" value="9">
-            <input type="button" class="calculator-keys-operator" onclick="insert('-')" value="-">
-            <input type="button" class="calculator-key-number" onclick="insert('4')" value="4">
-            <input type="button" class="calculator-key-number" onclick="insert('5')" value="5">
-            <input type="button" class="calculator-key-number" onclick="insert('6')" value="6">
-            <input type="button" class="calculator-keys-operator" onclick="insert('+')" value="+">
-            <input type="button" class="calculator-key-number" onclick="insert('1')" value="1">
-            <input type="button" class="calculator-key-number" onclick="insert('2')" value="2">
-            <input type="button" class="calculator-key-number" onclick="insert('3')" value="3">
-            <input type="button" class="calculator-keys-operator calculator-key-equal" onclick="calculate()" value="=">
-            <input type="button" class="calculator-key-zero" onclick="insert('0')" value="0">
-            <input type="button" onclick="insert('.')" value=".">
+            <input type="button" class="calculator-keys-operator" value="C">
+            <input type="button" class="calculator-keys-operator" value="<">
+            <input type="button" class="calculator-keys-operator" value="/">
+            <input type="button" class="calculator-keys-operator" value="X">
+            <input type="button" class="calculator-key-number" value="7">
+            <input type="button" class="calculator-key-number" value="8">
+            <input type="button" class="calculator-key-number" value="9">
+            <input type="button" class="calculator-keys-operator" value="-">
+            <input type="button" class="calculator-key-number" value="4">
+            <input type="button" class="calculator-key-number" value="5">
+            <input type="button" class="calculator-key-number" value="6">
+            <input type="button" class="calculator-keys-operator" value="+">
+            <input type="button" class="calculator-key-number" value="1">
+            <input type="button" class="calculator-key-number" value="2">
+            <input type="button" class="calculator-key-number" value="3">
+            <input type="button" class="calculator-keys-operator calculator-key-equal" value="=">
+            <input type="button" class="calculator-key-zero" value="0">
+            <input type="button" value=".">
         </form>
     </main>
     <script src="script.js">
