fixed multiplication dont worked

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="button" class="calculator-keys-operator" value="C">
             <input type="button" class="calculator-keys-operator" value="<">
             <input type="button" class="calculator-keys-operator" value="/">
-            <input type="button" class="calculator-keys-operator" value="X">
+            <input type="button" class="calculator-keys-operator" value="*">
             <input type="button" class="calculator-key-number" value="7">
             <input type="button" class="calculator-key-number" value="8">
             <input type="button" class="calculator-key-number" value="9">
